target/generated-sources/antlr4/progetto/LinguaggioParser.java
// Generated from progetto/Linguaggio.g4 by ANTLR 4.13.2
package progetto;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LinguaggioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, ADD=6, SUB=7, MUL=8, DIV=9, MOD=10, 
		POW=11, INCR=12, DECR=13, ADDEQ=14, SUBEQ=15, DIVEQ=16, MULEQ=17, EQQ=18, 
		NEQ=19, LEQ=20, GEQ=21, LT=22, GT=23, NOT=24, AND=25, OR=26, DOLL=27, 
		CONCAT=28, TOSTR=29, STRING_START=30, IF=31, ELSE=32, WHILE=33, ASSIGN=34, 
		OUT=35, INPUT=36, NOP=37, FOR=38, FROM=39, TO=40, BREAK=41, SWITCH=42, 
		CASE=43, DEFAULT=44, EXIT=45, DLOW=46, DGRT=47, COLON=48, QUESTIONMARK=49, 
		LBRACK=50, RBRACK=51, LPAR=52, RPAR=53, LBRACE=54, RBRACE=55, COMMA=56, 
		SEMICOLON=57, AT=58, STRING=59, BOOL=60, INT=61, DEC=62, CHAR=63, ID=64, 
		COMMENT=65, COMMENT_ML=66, WS=67;
	public static final int
		RULE_main = 0, RULE_decl = 1, RULE_varDec = 2, RULE_com = 3, RULE_exp = 4, 
		RULE_type = 5, RULE_baseType = 6, RULE_num = 7, RULE_switchBody = 8, RULE_caseBranch = 9, 
		RULE_defaultBranch = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "decl", "varDec", "com", "exp", "type", "baseType", "num", "switchBody", 
			"caseBranch", "defaultBranch"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'dec'", "'bool'", "'string'", "'char'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'^'", "'++'", "'--'", "'+='", "'-='", "'/='", "'*='", 
			"'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'not'", "'and'", "'or'", 
			"'$'", null, "'toStr'", null, "'if'", "'else'", "'while'", "'='", "'print'", 
			"'input'", "'nop'", "'for'", "'from'", "'to'", "'break'", "'switch'", 
			"'case'", "'default'", "'exit'", "'<<'", "'>>'", "':'", "'?'", "'['", 
			"']'", "'('", "')'", "'{'", "'}'", "','", "';'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "ADD", "SUB", "MUL", "DIV", "MOD", 
			"POW", "INCR", "DECR", "ADDEQ", "SUBEQ", "DIVEQ", "MULEQ", "EQQ", "NEQ", 
			"LEQ", "GEQ", "LT", "GT", "NOT", "AND", "OR", "DOLL", "CONCAT", "TOSTR", 
			"STRING_START", "IF", "ELSE", "WHILE", "ASSIGN", "OUT", "INPUT", "NOP", 
			"FOR", "FROM", "TO", "BREAK", "SWITCH", "CASE", "DEFAULT", "EXIT", "DLOW", 
			"DGRT", "COLON", "QUESTIONMARK", "LBRACK", "RBRACK", "LPAR", "RPAR", 
			"LBRACE", "RBRACE", "COMMA", "SEMICOLON", "AT", "STRING", "BOOL", "INT", 
			"DEC", "CHAR", "ID", "COMMENT", "COMMENT_ML", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Linguaggio.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguaggioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public ComContext com() {
			return getRuleContext(ComContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LinguaggioParser.EOF, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			decl();
			setState(23);
			com(0);
			setState(24);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public List<VarDecContext> varDec() {
			return getRuleContexts(VarDecContext.class);
		}
		public VarDecContext varDec(int i) {
			return getRuleContext(VarDecContext.class,i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 62L) != 0)) {
				{
				{
				setState(26);
				varDec();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(LinguaggioParser.SEMICOLON, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguaggioParser.ASSIGN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			type();
			setState(33);
			match(ID);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(34);
				match(ASSIGN);
				setState(35);
				exp(0);
				}
			}

			setState(38);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComContext extends ParserRuleContext {
		public ComContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_com; }
	 
		public ComContext() { }
		public void copyFrom(ComContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BreakCmdContext extends ComContext {
		public TerminalNode BREAK() { return getToken(LinguaggioParser.BREAK, 0); }
		public BreakCmdContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitBreakCmd(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NonDetContext extends ComContext {
		public TerminalNode DLOW() { return getToken(LinguaggioParser.DLOW, 0); }
		public List<ComContext> com() {
			return getRuleContexts(ComContext.class);
		}
		public ComContext com(int i) {
			return getRuleContext(ComContext.class,i);
		}
		public TerminalNode DGRT() { return getToken(LinguaggioParser.DGRT, 0); }
		public List<TerminalNode> AT() { return getTokens(LinguaggioParser.AT); }
		public TerminalNode AT(int i) {
			return getToken(LinguaggioParser.AT, i);
		}
		public NonDetContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitNonDet(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArrayAssignContext extends ComContext {
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode LBRACK() { return getToken(LinguaggioParser.LBRACK, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode RBRACK() { return getToken(LinguaggioParser.RBRACK, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguaggioParser.ASSIGN, 0); }
		public ArrayAssignContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitArrayAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FastAssignContext extends ComContext {
		public Token op;
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode ADDEQ() { return getToken(LinguaggioParser.ADDEQ, 0); }
		public TerminalNode SUBEQ() { return getToken(LinguaggioParser.SUBEQ, 0); }
		public TerminalNode DIVEQ() { return getToken(LinguaggioParser.DIVEQ, 0); }
		public TerminalNode MULEQ() { return getToken(LinguaggioParser.MULEQ, 0); }
		public FastAssignContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitFastAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ComContext {
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguaggioParser.ASSIGN, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode QUESTIONMARK() { return getToken(LinguaggioParser.QUESTIONMARK, 0); }
		public TerminalNode COLON() { return getToken(LinguaggioParser.COLON, 0); }
		public IfStatementContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SwitchCmdContext extends ComContext {
		public TerminalNode SWITCH() { return getToken(LinguaggioParser.SWITCH, 0); }
		public TerminalNode LPAR() { return getToken(LinguaggioParser.LPAR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(LinguaggioParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(LinguaggioParser.LBRACE, 0); }
		public SwitchBodyContext switchBody() {
			return getRuleContext(SwitchBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LinguaggioParser.RBRACE, 0); }
		public SwitchCmdContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitSwitchCmd(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends ComContext {
		public TerminalNode WHILE() { return getToken(LinguaggioParser.WHILE, 0); }
		public TerminalNode LPAR() { return getToken(LinguaggioParser.LPAR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(LinguaggioParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(LinguaggioParser.LBRACE, 0); }
		public ComContext com() {
			return getRuleContext(ComContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LinguaggioParser.RBRACE, 0); }
		public WhileContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NopContext extends ComContext {
		public TerminalNode NOP() { return getToken(LinguaggioParser.NOP, 0); }
		public NopContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitNop(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OutContext extends ComContext {
		public TerminalNode OUT() { return getToken(LinguaggioParser.OUT, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public OutContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitOut(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PreDecrIncContext extends ComContext {
		public Token op;
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode DECR() { return getToken(LinguaggioParser.DECR, 0); }
		public TerminalNode INCR() { return getToken(LinguaggioParser.INCR, 0); }
		public PreDecrIncContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitPreDecrInc(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ComContext {
		public TerminalNode INPUT() { return getToken(LinguaggioParser.INPUT, 0); }
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public InputContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExitContext extends ComContext {
		public TerminalNode EXIT() { return getToken(LinguaggioParser.EXIT, 0); }
		public ExitContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitExit(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PostDecrIncContext extends ComContext {
		public Token op;
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode DECR() { return getToken(LinguaggioParser.DECR, 0); }
		public TerminalNode INCR() { return getToken(LinguaggioParser.INCR, 0); }
		public PostDecrIncContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitPostDecrInc(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfContext extends ComContext {
		public TerminalNode IF() { return getToken(LinguaggioParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(LinguaggioParser.LPAR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(LinguaggioParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(LinguaggioParser.LBRACE, 0); }
		public ComContext com() {
			return getRuleContext(ComContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LinguaggioParser.RBRACE, 0); }
		public IfContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfElseContext extends ComContext {
		public TerminalNode IF() { return getToken(LinguaggioParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(LinguaggioParser.LPAR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(LinguaggioParser.RPAR, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(LinguaggioParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(LinguaggioParser.LBRACE, i);
		}
		public List<ComContext> com() {
			return getRuleContexts(ComContext.class);
		}
		public ComContext com(int i) {
			return getRuleContext(ComContext.class,i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(LinguaggioParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(LinguaggioParser.RBRACE, i);
		}
		public TerminalNode ELSE() { return getToken(LinguaggioParser.ELSE, 0); }
		public IfElseContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitIfElse(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForWithFinalContext extends ComContext {
		public TerminalNode FOR() { return getToken(LinguaggioParser.FOR, 0); }
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode FROM() { return getToken(LinguaggioParser.FROM, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode TO() { return getToken(LinguaggioParser.TO, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(LinguaggioParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(LinguaggioParser.LBRACE, i);
		}
		public List<ComContext> com() {
			return getRuleContexts(ComContext.class);
		}
		public ComContext com(int i) {
			return getRuleContext(ComContext.class,i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(LinguaggioParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(LinguaggioParser.RBRACE, i);
		}
		public TerminalNode ELSE() { return getToken(LinguaggioParser.ELSE, 0); }
		public ForWithFinalContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitForWithFinal(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SeqContext extends ComContext {
		public List<ComContext> com() {
			return getRuleContexts(ComContext.class);
		}
		public ComContext com(int i) {
			return getRuleContext(ComContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(LinguaggioParser.SEMICOLON, 0); }
		public SeqContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitSeq(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ComContext {
		public TerminalNode ID() { return getToken(LinguaggioParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(LinguaggioParser.ASSIGN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public AssignContext(ComContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguaggioVisitor ) return ((LinguaggioVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComContext com() throws RecognitionException {
		return com(0);
	}

	private ComContext com(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ComContext _localctx = new ComContext(_ctx, _parentState);
		ComContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_com, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new PreDecrIncContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
